# kalesp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DOCS1.md  DOCS2.md  LICENSE  LORE.md  README.md  ROADMAP.md
.cargo/: config.toml
esp/: Cargo.toml  README_SERIAL.md
esp/src/: mining.rs
esp/src/msg/: entropy.rs  hash.rs  help.rs  info.rs  mine.rs  mod.rs  reset.rs  unknown.rs  zeros.rs
examples/: README.md  requirements.txt
interface/: README.md  README_GUI.md  esp32_gui.py  python_serial.py  requirements.txt
src/: lib.rs  mining.rs
src/msg/: entropy.rs  help.rs  info.rs  mine.rs  mod.rs  ping.rs  reset.rs  status.rs  zeros.rs
