[package]
edition      = "2021"
name         = "kalesp"
rust-version = "1.86"
version      = "0.1.0"

[[bin]]
name = "kalesp"
path = "./src/bin/main.rs"


[dependencies]
esp-bootloader-esp-idf = { version = "0.2.0", features = ["esp32"] }
esp-hal                = { version = "=1.0.0-rc.0", features = ["esp32"] }

critical-section = "1.2.0"
rtt-target       = "0.6.1"
heapless         = "0.8.0"
sha2             = { version = "0.10", default-features = false }
embedded-hal     = "1.0"


[profile.dev]
# Rust debug is too slow.
# For debug builds always builds with some optimization
opt-level = "s"

[profile.release]
codegen-units    = 1     # LLVM can perform better optimizations using a single thread
debug            = 2
debug-assertions = false
incremental      = false
lto              = 'fat'
opt-level        = 's'
overflow-checks  = false
